Implementing footer filters

--- a/src/week4/Todo.css
+++ b/src/week4/Todo.css
@@ -303,6 +303,7 @@ body {
 	margin: 3px;
 	padding: 3px 7px;
 	text-decoration: none;
+        text-transform: capitalize;
 	border: 1px solid transparent;
 	border-radius: 3px;
 }
